# pjproject-go-native

./: .gitignore  CMakeLists.txt  Makefile  Readme.md  assemble-linux.sh  assemble-mac.sh  build-dev.sh  build-linux.sh  build-mac.sh  build-pj-mac.sh  build-pj.sh  library.cpp  library.h  main.cpp
fvad/src/: fvad.c
fvad/src/signal_processing/: resample_by_2.c  resample_by_2.h  resample_by_2_internal.c  resample_by_2_internal.h  resample_fractional.c
opencore-amr/: configure.ac
opus/: CMakeLists.txt  configure  opus_functions.cmake
pjproject-ext/: CMakeLists.txt  main.cpp  pj-ext.cpp  pj-ext.h
pjproject/pjsip/src/pjsua-lib/: pjsua_core.c
